--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="./assets/css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/animate.css">
@@ -45,6 +46,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flaticon.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/icomoon.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
+
     <title>Sakar</title>
   </head>
   <body>
